# python-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: health.py  user.py
app/core/: config.py  database.py  logging.py  middleware.py  security.py
app/models/: user.py
app/repositories/: user_repo.py
app/schemas/: user.py
app/services/: user_service.py
docker/: entrypoint.sh
migrations/: env.py
migrations/versions/: e0974a44791f_initial.py
tests/: conftest.py
tests/integration/: test_health.py  test_user_api.py
tests/unit/: test_config.py  test_user_service.py
