[project]
name = "python-backend"
version = "0.2.0"
description = "A clean, layered architecture template for Python backend projects built with FastAPI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "John McMeen" }]
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "pydantic[email]>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "pyjwt[crypto]>=2.10,<3",
    "bcrypt>=4.2,<5",
    "alembic>=1.14,<2",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "pre-commit>=4.0",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
    "S",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S107"]
"migrations/**" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
exclude = ["migrations/", "tests/"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
